--- a/_assets/css/__modules/_controls.scss
+++ b/_assets/css/__modules/_controls.scss
@@ -121,16 +121,16 @@
     cursor: pointer;
     
     &--is-left {
-      background-image: url("data:image/svg+xml;utf-8,<svg enable-background=\"new 0 0 13.5 22.5\" viewBox=\"0 0 13.5 22.5\" preserveAspectRatio=\"none\" xmlns=\"http://www.w3.org/2000/svg\"><path d=\"m11.521 20.777-10.007-9.888 10.007-9.888\" fill=\"none\" opacity=\".8\" stroke=\"#fff\"/></svg>");
+      background-image: url("../img/arrow_left.svg");
       &:hover {
-      background-image: url("data:image/svg+xml;utf-8,<svg enable-background=\"new 0 0 13.5 22.5\" viewBox=\"0 0 13.5 22.5\" preserveAspectRatio=\"none\" xmlns=\"http://www.w3.org/2000/svg\"><path d=\"m11.521 20.777-10.007-9.888 10.007-9.888\" fill=\"none\" opacity=\".8\" stroke=\"#e56b36\"/></svg>");
+      background-image: url("../img/arrow_left_or.svg");
     }
     }
     &--is-right {
       border-left: 1px solid rgba(#fff, 0.2);
-      background-image: url("data:image/svg+xml;utf-8,<svg enable-background=\"new 0 0 13.5 22.5\" viewBox=\"0 0 13.5 22.5\" preserveAspectRatio=\"none\" xmlns=\"http://www.w3.org/2000/svg\"><path d=\"m1.514 1.001 10.007 9.888-10.007 9.888\" fill=\"none\" opacity=\".8\" stroke=\"#ffffff\"/></svg>");
+      background-image: url("../img/arrow_right.svg");
       &:hover {
-        background-image: url("data:image/svg+xml;utf-8,<svg enable-background=\"new 0 0 13.5 22.5\" viewBox=\"0 0 13.5 22.5\" preserveAspectRatio=\"none\" xmlns=\"http://www.w3.org/2000/svg\"><path d=\"m1.514 1.001 10.007 9.888-10.007 9.888\" fill=\"none\" opacity=\".8\" stroke=\"#e56b36\"/></svg>");
+        background-image: url("../img/arrow_right_or.svg");
       }
       
     }
